feat(lambda): improve lambda invocation with new algorithm